<resources>
    <string name="app_name">Posturize</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="nav_daily">Daily</string>
    <string name="selectDaily">Select Day</string>
    <string name="nav_weekly">Weekly</string>
    <string name="selectWeekly">Select Week</string>
    <string name="nav_monthly">Monthly</string>
    <string name="selectMonthly">Select Month</string>

    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="remember_me">Remember me</string>
    <string name="label_sign_in">Sign In</string>
    <string name="action_google_sign_out">Sign Out</string>
    <string name="action_google_sign_in">Sign In with Google</string>
    <string name="server_client_id">513031166011-sr6s6kgvp6off9hb7m7hq19l8r2o4cbm.apps.googleusercontent.com</string>
    <string name="signed_out">Signed Out</string>
    <string name="signed_in_greeting">Welcome, %s!</string>

    <string name="title_activity_test">TestActivity</string>

    <!--Preferences-->
    <string name="pref_notifications">Notifications</string>
    <string name="pref_summary_daily_update">Daily progress updates</string>
    <string name="pref_title_daily_update">Daily Update</string>
    <string name="pref_summary_weekly_update">Weekly progress updates</string>
    <string name="pref_title_weekly_update">Weekly Update</string>
    <string name="pref_summary_monthly_update">Monthly progress updates</string>
    <string name="pref_title_monthly_update">Monthly Update</string>
    <string name="pref_slouch_detection">Slouch Detection</string>
    <string name="pref_slouch_detection_tolerance">Tolerance</string>
    <string name="pref_slouch_tolerance_default">5%</string>
    <string name="preferences">Preferences</string>
    <string name="calibration">Calibration</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>

    <!--Wearable States-->
    <string name="connect">Connect</string>
    <string name="connected">Connected!</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibrated">Calibrated!</string>
    <string name="not_calibrated">Not calibrated</string>

    <!--Side Navigation view-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="pref_slouch_tolerances">
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
    </string-array>

    <!-- about us bio -->
    <string name="about_us_bio">Posturize is a posture correcting application created by three San Jose State University students: Mark Bragg, Jonathan Chen, and Matthew Montero. We thought of this idea after years of sitting in front of our computers writing code. We know firsthand how easy it is to end up with bad posture, and we decided that it is time to develop an easy-to-use solution that can be used in any situation. With the two wearables both attached to the proper places on the body, Posturize can be used to monitor your posture no matter the activity the user is performing.</string>

    <!-- instruction slides text -->
    <string-array name="instructions">
        <item>The following instructions will provide a logical path to take in order for you to begin using Posturize.</item>
        <item>First, you need to connect the wearables to the phone. Open the sidebar navigation, and tap the bluetooth button.</item>
        <item>Now you can tap the connect button, and wait for the dialog to tell you they are connected.</item>
        <item>Once you have connected your wearables and your phone, you need to calibrate your wearables. Open the sidebar navigation and tap the calibrate button, then tap the calibrate button in the popup. The wearables will vibrate twice to let you know the calibration process has begun.</item>
        <item>Optionally, you can tap the button on the wearables to calibrate.</item>
        <item>While the calibration takes place, which can take 1-2 minutes to complete. Sit in your ideal position in your best posture until the wearables vibrate once.</item>
        <item>Now that your wearables are calibrated, data collection has commenced and you will be notified when you slouch.</item>
    </string-array>

</resources>

