<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="?attr/colorPrimary"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:weightSum="1"
              tools:context="edu.sjsu.posturize.posturize.SignInActivity">

    <ImageView
        android:id="@+id/posturize_picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.94"
        android:src="@mipmap/spine"/>
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/account_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signed_out"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:alpha="0.8"/>
        <Button
            android:id="@+id/google_sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_google_sign_out"
            android:visibility="gone"/>
    </LinearLayout>


</LinearLayout>
